--- a/_bib/references.bib
+++ b/_bib/references.bib
@@ -5,12 +5,13 @@ References
 
 @article{Chorianopoulos_2018,
 author        = {Chorianopoulos, Konstantinos},
-title         = {{A taxonomy of video lecture styles}},
+title         = {{A Taxonomy of Asynchronous Instructional Video Styles}},
 abstract      = {Many educational organizations are employing instructional video
 in their pedagogy, but there is limited understanding of the possible presentation styles. In practice, the presentation style of video lectures ranges from a direct recording of classroom teaching with a stationary camera and screencasts with voice-over, up to highly elaborate video post-production. Previous work evaluated the effectiveness of several presentation styles, but there has not been any consistent taxonomy, which would have made comparisons and meta-analyses possible. In this article, we surveyed the research literature and we examined contemporary video-based courses, which have been produced by diverse educational organizations and teachers across various academic disciplines. We organized video lectures in two dimensions according to the level of human presence and according to the type of instructional media. In addition to organizing existing video lectures in a comprehensive way, the proposed taxonomy offers a design space that facilitates the choice of a suitable presentation style, as well as the preparation of new ones.},
 month         = {jan},
 year          = {2018},
 journal     = {The International Review of Research in Open and Distributed Learning},
+doi         = {http://dx.doi.org/10.19173/irrodl.v19i1.2920},
 link          = {Chorianopoulos_2018.pdf},
 issn          = {1492-3831},
 keywords      = {education,learning,video,lecture,production,style,emdodiment,instructional media},
