--- a/_bib/references.bib
+++ b/_bib/references.bib
@@ -11,7 +11,7 @@ in their pedagogy, but there is limited understanding of the possible presentati
 month         = {jan},
 year          = {2018},
 journal     = {The International Review of Research in Open and Distributed Learning},
-doi         = {http://dx.doi.org/10.19173/irrodl.v19i1.2920},
+doi         = {10.19173/irrodl.v19i1.2920},
 link          = {Chorianopoulos_2018.pdf},
 issn          = {1492-3831},
 keywords      = {education,learning,video,lecture,production,style,emdodiment,instructional media},
