--- a/_bib/references.bib
+++ b/_bib/references.bib
@@ -41,6 +41,7 @@ year = {2018}
 abstract = {Embodiment within robotics can serve as an innovative approach to attracting students to computer programming. Nevertheless, there is a limited number of empirical studies in authentic classroom environments to support this assumption. In this study, we explored the synergy between embodied learning and educational robotics through a series of programming activities. Thirty-six middle school students were asked to create applications for controlling a robot using diverse interaction modalities, such as touch, speech, hand and full body gestures. We measured students' preferences, views, and intentions. Further- more, we evaluated students' interaction modalities selections during a semi- open problem-solving task. The results revealed that students felt more confident about their programming skills after the activities. Moreover, participants chose interfaces that were attractive to them and congruent to the programming tasks.},
 author = {Merkouris, Alexandros and Chorianopoulos, Konstantinos},
 booktitle = {International Conference on Interactive Mobile Communication, Technologies and Learning (IMCL2017)},
+doi = {10.1007/978-3-319-75175-7_45},
 link = {Merkouris_2017a.pdf},
 keywords = {children,computer education,educational robotics,embodied learning,embodiment,experiment,human-robot interaction,input,interaction,robots},
 mendeley-tags = {computing education,embodiment,input,interaction,robots},
