--- a/_bib/references.bib
+++ b/_bib/references.bib
@@ -30,8 +30,10 @@ link = {Garneli_2018.pdf},
 journal = {Interactive Learning Environments},
 keywords = {Serious video games,computational thinking,computing education,science education,serious games,simulation},
 mendeley-tags = {computing education,science education,serious games},
-month = {jun},
-pages = {1--16},
+volume = {26},
+number = {3},
+month = {mar},
+pages = {386--401},
 publisher = {Routledge},
 url = {https://www.tandfonline.com/doi/full/10.1080/10494820.2017.1337036},
 year = {2018}
