--- a/_bib/references.bib
+++ b/_bib/references.bib
@@ -240,6 +240,7 @@ experience where the user forgets that he/she is exercising while playing.},
   keywords      = {active video game,competitive multiplayer,computer game,entary
 lifestyle,entertainment,exercise,exergame,exertion game,physical activity,sed-,video games},
   mendeley-tags = {entertainment,exercise,video games},
+  doi           = {10.1007/978-3-319-24589-8_53},
 }
 
 @InProceedings{Leftheriotis_2015,
@@ -475,6 +476,7 @@ just playing a well-designed game, it should also consider the involvement of st
   link          = {Giannakos_2015a.pdf},
   keywords      = {computing education,education,empirical evaluation,interaction design,learning,serious games,video game},
   mendeley-tags = {computing education,education,learning,serious games,video game},
+  doi = {10.1007/978-3-319-24589-8_28},
 }
 
 @InProceedings{Garneli_2015a,
@@ -856,6 +858,7 @@ more programming concepts and should also assess the cognitive benefits.},
   keywords      = {Computational thinking,Computer education,Programming,Scratch,Secondary education,computer
 education,confidence,encouragement,learning,programming,teaching},
   mendeley-tags = {computer education,learning,programming,teaching},
+  doi = {10.1145/2532748.2532761},
 }
 
 @InProceedings{Ilioudi_2013,
@@ -1002,6 +1005,7 @@ sociability, rules.},
 interaction,map,multimedia,quantified shelf,sports,ubiquitous computing,well-being},
   mendeley-tags = {GPS,evaluation,human-computer interaction,map,multimedia,quantified shelf,sports,ubiquitous
 computing,well-being},
+doi = {10.1109/GAS.2013.6632585},
 }
 
 @InProceedings{Garneli_2013,
@@ -1027,6 +1031,7 @@ curriculum topics.},
 education,constructivism,education,human-computer interaction,learning,making,playing,programming environment,serious
 game,storytelling element},
   mendeley-tags = {Scratch,children,computer education,education,human-computer interaction,learning,making,playing},
+  doi = {10.1007/978-3-642-40790-1_8},
 }
 
 @InProceedings{Rautiainen_2013,
@@ -1110,6 +1115,7 @@ navigation, and social consumption of videos.},
   keywords      = {human-computer interaction,information retrieval,media technology,methodology,multimedia,survey,video},
   mendeley-tags = {human-computer interaction,information retrieval,media technology,methodology,multimedia,survey,video},
   url           = {http://link.springer.com/chapter/10.1007/978-1-4471-4555-4{\_}1},
+  doi = {10.1007/978-1-4471-4555-4_1},
 }
 
 @Article{Chorianopoulos_2013b,
@@ -1410,6 +1416,7 @@ engineering process for interactive computer systems, and 3) a practice for teac
 roots,maker,making,open source},
   mendeley-tags = {3d printer,Processing,arduino,citizen science,community,creativity,grass roots,making,open source},
   url           = {http://dl.acm.org/citation.cfm?id=2305484.2305545},
+  doi = {10.1145/2305484.2305545},
 }
 
 @InProceedings{Giannakos_2012,
