fixed facebook abstract

--- a/_bib/references.bib
+++ b/_bib/references.bib
@@ -907,16 +907,7 @@ Applications. Previous user studies on Facebook have examined the immediate soci
 site, but they have not regarded emerging uses of the platform, such as gaming and applications, which do have a social
 component as a feature and not as a core principle. The ?Wasting Time? factor and the growth of ?Using Applications? factor
 indicate that Facebook has already become an integral part of daily computing routine, alongside with the rest of the
-entertainment desktop and web applications. This article investigates the uses and gratifications of the popular social
-networking site Facebook. In the exploratory stage, 70 users generated phrases to describe the manner they used Facebook.
-Interestingly, some users not only described the uses, but also mentioned how they perceive these uses. These phrases were
-coded into 14 items and clustered into four factors. The principal component analysis that was conducted in the third stage of
-the study, which was addressed to 222 Facebook users, verified the validity of the four factors: Social Connection, Social
-Network Surfing, Wasting Time and Using Applications. Previous user studies on Facebook have examined the immediate social
-effects of this popular social networking site, but they have not regarded emerging uses of the platform, such as gaming and
-applications, which do have a social component as a feature and not as a core principle. The ?Wasting Time? factor and the
-growth of ?Using Applications? factor indicate that Facebook has already become an integral part of daily computing routine,
-alongside with the rest of the entertainment desktop and web applications.},
+entertainment desktop and web applications.},
   doi           = {10.1080/0144929X.2012.659218},
   link          = {Giannakos_2013.pdf},
   issn          = {0144-929X},
