added experimental abstract

--- a/_bib/references.bib
+++ b/_bib/references.bib
@@ -829,6 +829,7 @@ suggested itinerary from a digital map. We found that the preferred shortest pat
 one. Notably, the preffered paths were slightly longer than the suggested, but there was no effect in the trip duration because
 there were fewer obstacles, such as cars. Since many pedestrians employ GPS enabled devices, the findings of this research
 inform the development of mobile applications and the design of new subjective map layers for city dwellers.},
+  doi = {10.3233/978-1-61499-286-8-647},
   link          = {Armeni_2013.pdf},
   keywords      = {cartography,citizen science,collective,community,experiment,gps,grass roots,human-computer
 interaction,map,multimedia,participatory,pedestrian,preference,route,shortest path,trajectory,ubiquitous computing,well-being},
@@ -1273,23 +1274,6 @@ learning,multimedia,museum,perceptions,performance,ubiquitous computing},
   url           = {http://www.springerlink.com/content/n20l520212624g44/},
 }
 
-@Unpublished{Chorianopoulos_2012,
-  author    = {Chorianopoulos, Konstantinos},
-  title     = {{User-based key frame detection in social web video}},
-  year      = {2012},
-  abstract  = {Video search results and suggested videos on web sites are represented with a video thumbnail, which is manually
-selected by the video uploader among three randomly generated ones (e.g., YouTube). In contrast, we present a grounded
-user-based approach for automatically detecting interesting key-frames within a video through aggregated users' replay
-interactions with the video player. Previous research has focused on content-based systems that have the benefit of analyzing a
-video without user interactions, but they are monolithic, because the resulting video thumbnails are the same regardless of the
-user preferences. We constructed a user interest function, which is based on aggregate video replays, and analyzed hundreds of
-user interactions. We found that the local maximum of the replaying activity stands for the semantics of information rich
-videos, such as lecture, and how-to. The concept of user-based key-frame detection could be applied to any video on the web, in
-order to generate a user-based and dynamic video thumbnail in search results.},
-  booktitle = {Information Systems},
-  file      = {:Chorianopoulos_2012.pdf},
-}
-
 @InProceedings{Chorianopoulos_2012a,
   author        = {Chorianopoulos, Konstantinos},
   title         = {{Crowdsourcing user interactions with the video player}},
@@ -1364,23 +1348,6 @@ technology,surface,sustainabiity,tabletop,ubiquitous computing},
   mendeley-tags = {art,children,computer education,creativity,evaluation,human-computer
 interaction,multi-touch,multimedia,software technology,surface,sustainabiity,tabletop,ubiquitous computing},
   url           = {http://dx.doi.org/10.1109/GAS.2012.6225923},
-}
-
-@Unpublished{Chorianopoulos_2012c,
-  author    = {Chorianopoulos, Konstantinos and Avlonitis, Markos},
-  title     = {{FrameRank : Implicit User-based key frame Detection and Ranking}},
-  year      = {2012},
-  abstract  = {We present a method for user-based detection and ranking of important video key-frames. Instead of content-based
-analysis that detects object, shot, and scene changes, we analyze aggregate user interactions (e.g., pause, seek/scrub) within
-a web video. Moreover, we validated the proposed method in a controlled lab experiment with lecture videos that content-based
-approaches cannot structure meaningfully. In particular, we modeled the collective information seeking behavior as a time
-series of user interest. We assumed that replay of a video segment stands for increased user interest in that segment and skip
-stands for less interesting parts. We found that only the replay time series matches significantly well the semantics of the
-lecture video. In practice, user-based detection of interesting video frames might improve navigation within information-rich
-but visually unstructured videos (e.g., lectures) on the web and has also the potential to improve video search results with
-personalized video thumbnails.},
-  booktitle = {Information Systems},
-  file      = {:Chorianopoulos_2012c.pdf},
 }
 
 @InProceedings{Chorianopoulos_2012d,
@@ -1728,6 +1695,7 @@ different handsets. It was found that there are significant differences in icon 
 younger mobile phone users. We conclude that designers of mobile phone icons have to regard older user groups differently and
 we describe the qualities of icons suitable to each one of the age groups. Finally, we highlight the need for additional
 similar research in different ethnic and cultural groups.},
+  doi = {10.1075/idj.18.1.03cho},
   link          = {Koutsourelakis_2010.pdf},
   keywords      = {age,human-computer interaction,icon,mobile phone,multimedia,recognition,ubiquitous computing,usability,user
 study},
@@ -1750,6 +1718,7 @@ more than two hundreds social encounters. We found that users with more elaborat
 social encounters, than those users with the default avatars. Most notably, female users selected to speak with male avatars
 much more frequently, when using the attractive avatar, which indicates a self-confidence effect induced by the appearance of
 the personal avatar.},
+  doi = {10.4101/jvwr.v2i5.779},
   link          = {Banakou_2010.pdf},
   keywords      = {Second Life,Virtual ethnography,avatar appearance,ethnography,human-computer
 interaction,multimedia,self-confidence,sociability,virtual world},
@@ -2000,6 +1969,7 @@ through a shared screen. The development process begins with the design of inter
 as well as between the participants themselves. Then we map the interaction design concepts into multimedia and architectural
 design. Finally, we provide a discussion on the creative process and the collaboration between different disciplines, such as
 architecture, urban planning, cartography, computer engineering, and media studies.},
+  doi = {10.1007/978-1-84882-727-1_5},
   link          = {Chorianopoulos_2010d.pdf},
   keywords      = {architectural space,architecture,collaboration,creativity,human-computer
 interaction,installation,multimedia,processing,surface,ubiquitous computing},
@@ -2024,6 +1994,7 @@ across different handsets performed best for mobile phone icons, while abstract 
 Designers of mobile phone icons have to balance a trade-off between the need of the manufacturers and wireless operators to
 differentiate their offerings through branding, and the need of the consumers for a familiar visual language in mobile phone
 menus.},
+  doi = {10.2752/146069210X12766130824939},
   link          = {Koutsourelakis_2010a.pdf},
   keywords      = {human-computer interaction,icon,mobile phone,multimedia,recognition,ubiquitous computing,user study},
   mendeley-tags = {human-computer interaction,multimedia,ubiquitous computing},
