added header content

--- a/_bib/selected.bib
+++ b/_bib/selected.bib
@@ -206,3 +206,30 @@ techniques.},
   publisher     = {Taylor {\&} Francis},
   url           = {http://www.informaworld.com/10.1080/10447310802205750},
 }
+
+@Article{Chorianopoulos_2006,
+  author        = {Chorianopoulos, Konstantinos and Spinellis, Diomidis},
+  title         = {{User interface evaluation of interactive TV: a media studies perspective}},
+  journal       = {Universal Access in the Information Society},
+  year          = {2006},
+  volume        = {5},
+  number        = {2},
+  pages         = {209--218},
+  month         = {may},
+  abstract      = {A diverse user population employs interactive TV (ITV) applications in a leisure context for entertainment
+purposes. The traditional user interface (UI) evaluation paradigm involving efficiency and task completion may not be adequate
+for the assessment of such applications. In this paper, we argue that unless ITV applications are evaluated with consideration
+for the ordinary TV viewer, they are going to be appropriate only for the computer literate user, thus excluding the TV
+audience from easy access to information society services. The field of media studies has accumulated an extensive theory of TV
+and associated methods. We applied the corresponding findings in the domain of ITV to examine how universal access to ITV
+applications can be obtained. By combining these results with emerging affective quality theories for interactive products, we
+propose a UI evaluation framework for ITV applications.},
+  doi           = {10.1007/s10209-006-0032-1},
+  link          = {Chorianopoulos_2006.pdf},
+  issn          = {1615-5289},
+  keywords      = {Affective quality,Evaluation,Interactive television,Media studies,Methodology,User
+interface,affective,human-computer interaction,ubiquitous computing},
+  mendeley-tags = {affective,human-computer interaction,ubiquitous computing},
+  publisher     = {Springer Berlin / Heidelberg},
+  url           = {http://www.springerlink.com/content/a24626572258gp6p/},
+}
