--- a/_bib/workshops.bib
+++ b/_bib/workshops.bib
@@ -3,6 +3,16 @@
 References
 ==========
 
+@inproceedings{Chorianopoulos_2018b,
+  title={Immortality and resurrection of the digital self},
+  author={Chorianopoulos, Konstantinos},
+  booktitle={Proceedings of the Digital Culture & AudioVisual Challenges (DCAC) Interdisciplinary Creativity in Arts and Technology},
+  pages={4},
+  year={2018},
+  link={Chorianopoulos_2018b.pdf},
+  organization={Ionian University},
+}
+
 @InProceedings{Hagen_2016,
   author        = {Hagen, Kristoffer and Chorianopoulos, Konstantinos and Wang, Alf Inge and Jaccheri, Maria Letizia and Weie,
 Stian},
