--- a/_bib/selected.bib
+++ b/_bib/selected.bib
@@ -73,34 +73,6 @@ informatics,urban studies},
   url           = {http://ci-journal.net/index.php/ciej/article/view/1095/1121},
 }
 
-@Article{Chorianopoulos_2014c,
-  author        = {Chorianopoulos, Konstantinos and Giannakos, Michail N.},
-  title         = {{Design Principles for Serious Video Games in Mathematics Education: From Theory to Practice}},
-  journal       = {International Journal on Serious Games},
-  year          = {2014},
-  volume        = {1},
-  number        = {3},
-  pages         = {51--59},
-  abstract      = {There is growing interest in the employment of serious video games in science education, but there are no
-clear design principles. After surveying previous work in serious video game design, we highlighted the following design
-principles: 1) engage the students with narrative (hero, story), 2) employ familiar gameplay mechanics from popular video
-games, 3) engage students into constructive trial and error game-play and 4) situate collaborative learning. As illustrated
-examples we designed two math video games targeted to primary education students. The gameplay of the math video games embeds
-addition operations in a seamless way, which has been inspired by that of classic platform games. In this way, the students are
-adding numbers as part of popular gameplay mechanics and as a means to reach the video game objective, rather than as an end in
-itself. The employment of well-defined principles in the design of math video games should facilitate the evaluation of
-learning effectiveness by researchers. Moreover, educators can deploy alternative versions of the games in order to engage
-students with diverse learning styles. For example, some students might be motived and benefited by narrative, while others by
-collaboration, because it is unlikely that one type of serious video game might fit all learning styles. The proposed
-principles are not meant to be an exhaustive list, but a starting point for extending the list and applying them in other cases
-of serious video games beyond mathematics and learning.},
-  doi           = {10.17083/ijsg.v1i3.12},
-  link          = {Chorianopoulos_2014c.pdf},
-  keywords      = {Design Principles,Education,Guidelines,Interaction Design,Mathematics,Serious Video
-Games,design,education,human-computer interaction,learning,video games},
-  mendeley-tags = {design,education,human-computer interaction,learning,video games},
-}
-
 @Article{Chorianopoulos_2013b,
   author        = {Chorianopoulos, Konstantinos},
   title         = {{Collective intelligence within web video}},
@@ -133,7 +105,7 @@ interaction,interaction,multimedia,time-series,video lectures},
 }
 
 @Article{Koutsourelakis_2010,
-  author        = {Koutsourelakis, C and Chorianopoulos, Konstantinos},
+  author        = {Koutsourelakis, Charis and Chorianopoulos, Konstantinos},
   title         = {{Icons in mobile phones Comprehensibility differences between older and younger users}},
   journal       = {Information Design Journal},
   year          = {2010},
@@ -154,29 +126,6 @@ similar research in different ethnic and cultural groups.},
 study},
   mendeley-tags = {human-computer interaction,multimedia,ubiquitous computing},
   url           = {http://dx.doi.org/10.1075/idj.18.1.03cho},
-}
-
-@Article{Banakou_2010,
-  author        = {Banakou, Domna and Chorianopoulos, Konstantinos},
-  title         = {{The effects of Avatars Gender and Appearance on Social Behavior in Online 3D Virtual Worlds}},
-  journal       = {Journal of Virtual Worlds Research},
-  year          = {2010},
-  volume        = {2},
-  number        = {5},
-  abstract      = {In this article, we investigate the effects of avatars appearance on user sociability in 3D virtual worlds.
-In particular, we study gender and appearance differences in social communication preferences and behavior in virtual public
-spaces. For this purpose, we have employed the virtual ethnographic method, which is an adaptation of traditional ethnography
-for the study of cyberspace. Although we only employed nine users who used four different avatars, we observed a cumulative of
-more than two hundreds social encounters. We found that users with more elaborate avatars had a higher success rate in their
-social encounters, than those users with the default avatars. Most notably, female users selected to speak with male avatars
-much more frequently, when using the attractive avatar, which indicates a self-confidence effect induced by the appearance of
-the personal avatar.},
-  doi = {10.4101/jvwr.v2i5.779},
-  link          = {Banakou_2010.pdf},
-  keywords      = {Second Life,Virtual ethnography,avatar appearance,ethnography,human-computer
-interaction,multimedia,self-confidence,sociability,virtual world},
-  mendeley-tags = {ethnography,human-computer interaction,multimedia,self-confidence,virtual world},
-  url           = {http://journals.tdl.org/jvwr/index.php/jvwr/article/view/779},
 }
 
 @Article{Chorianopoulos_2008a,
