added jost article

--- a/_bib/papers.bib
+++ b/_bib/papers.bib
@@ -1,3 +1,16 @@
+@article{Merkouris_2019,
+author={Merkouris, Alexandros and Chorianopoulou, Betty and Chorianopoulos, Konstantinos and Chrissikopoulos, Vassilios},
+title={Understanding the Notion of Friction Through Gestural Interaction with a Remotely Controlled Robot},
+journal={Journal of Science Education and Technology},
+year={2019},
+number={0},
+volume= {0},
+abstract={Embodied interaction with tangible interactive objects can be beneficial for introducing abstract scientific concepts, especially for young learners. Nevertheless, there is limited comparative evaluation of alternative interaction modalities with contemporary educational technology, such as tablets and robots. In this study, we explore the effects of touch and gestural interaction with a tablet and a robot, in the context of a primary education physics course about the notion of friction. For this purpose, 56 students participated in a between-groups study that involved four computationally enhanced interventions which correspond to different input and output modalities, respectively: (1) touch-virtual, (2) touch-physical, (3) hand gesture-virtual, and (4) hand gesture-physical. We measured students' friction knowledge and examined their views. We found that the physical conditions had greater learning impact concerning friction knowledge compared to the virtual way. Additionally, physical manipulation benefited those learners who had misconceptions or limited initial knowledge about friction. We also found that students who used the more familiar touchscreen interface demonstrated similar learning gains and reported higher usability compared to those using the hand-tilt interface. These findings suggest that user interface familiarity should be carefully balanced with user interface congruency, in order to establish accessibility to a scientific concept in a primary education context.},
+issn={1573-1839},
+doi={10.1007/s10956-018-9760-2},
+url={https://doi.org/10.1007/s10956-018-9760-2},
+link={Merkouris_2019.pdf},
+}
 
 @article{Chorianopoulos_2018,
 author        = {Chorianopoulos, Konstantinos},
