added pci papers and updated header

--- a/_bib/papers.bib
+++ b/_bib/papers.bib
@@ -12,6 +12,30 @@ url={https://doi.org/10.1007/s10956-018-9760-2},
 link={Merkouris_2019.pdf},
 }
 
+@inproceedings{Deliyannis_2018,
+   abstract={The proliferation of smartphones with video recording and action cameras has empowered users to effortlessly capture everyday moments and activities in video format. This process often results into long video sequences that need to be edited down and summarized in order to be properly archived, shared within social media, or simply projected to family and friends. For those who do not possess video-editing skills, isolating the most appropriate moments is a difficult and time-consuming task. This work presents "ActionTrip", a system that provides gestural user interaction during video-capture, in order to seamlessly tag personal points of interest. In addition, the system captures contextual information about nearby landmarks and information from social networking systems. This combination of personal with social preferences has enabled a single-step final editing process, which presents to the user a small list   of points interest (public landmarks and personal preferences), instead of the actual recorded video that might be very long to comprehend. The benefits of this system have been demonstrated through a small-scale case study during the visit and tour in a European city.},
+   title={ActionTrip: automating egocentric video production through gestural interaction and landmark awareness},
+   author={Deliyannis, Ioannis and Symianakis, Sifis and Chorianopoulos, Konstantinos},
+   booktitle={Proceedings of the 22nd Pan-Hellenic Conference on Informatics},
+   pages={127--132},
+   year={2018},
+   organization={ACM},
+   link={Deliyannis_2018.pdf},
+   doi={10.1145/3291533.3291585},
+ }
+
+@inproceedings{Merkouris_2018,
+   abstract={Contemporary research has introduced educational robotics in the classroom, but there are few studies about the effects of alternative embodied interaction modalities on computational thinking and science education. Twenty-six middle school students were asked to program interfaces for controlling the heading and speed of a robot using two types of embodied interaction modalities. We compared touch and full-body gestures to autonomous control, which does not require any embodied interaction. We assessed the development of their computational thinking skills by analyzing the projects they created during a problem-solving task and examined their understandings of science concepts related to kinematics. We found that novice students preferred full-body interfaces, while advanced students moved to more disembodied and abstract computational thinking. These findings might be applied to focus computing and science education  activities to the right age and abilities groups of students.},
+   title={Programming touch and full-body interaction with a remotely controlled robot in a secondary education STEM course},
+   author={Merkouris, Alexandros and Chorianopoulos, Konstantinos},
+   booktitle={Proceedings of the 22nd Pan-Hellenic Conference on Informatics},
+   pages={225--229},
+   year={2018},
+   organization={ACM},
+   link={Merkouris_2018.pdf},
+   doi={10.1145/3291533.3291537},
+ }
+
 @article{Chorianopoulos_2018,
 author        = {Chorianopoulos, Konstantinos},
 title         = {{A Taxonomy of Asynchronous Instructional Video Styles}},
@@ -1111,7 +1135,7 @@ technology,toolkit,ubiquitous computing},
   url           = {http://doi.acm.org/10.1145/1996461.1996513},
 }
 
-@Article{Koutsourelakis_2010,
+@Article{Koutsourelakis_2010a,
   author        = {Koutsourelakis, C and Chorianopoulos, Konstantinos},
   title         = {{Icons in mobile phones Comprehensibility differences between older and younger users}},
   journal       = {Information Design Journal},
@@ -1128,7 +1152,7 @@ younger mobile phone users. We conclude that designers of mobile phone icons hav
 we describe the qualities of icons suitable to each one of the age groups. Finally, we highlight the need for additional
 similar research in different ethnic and cultural groups.},
   doi = {10.1075/idj.18.1.03cho},
-  link          = {Koutsourelakis_2010.pdf},
+  link          = {Koutsourelakis_2010a.pdf},
   keywords      = {age,human-computer interaction,icon,mobile phone,multimedia,recognition,ubiquitous computing,usability,user
 study},
   mendeley-tags = {human-computer interaction,multimedia,ubiquitous computing},
@@ -1307,7 +1331,7 @@ interaction,installation,multimedia,processing,surface,ubiquitous computing},
   url           = {http://www.springerlink.com/content/u657l6240x2058k2/},
 }
 
-@Article{Koutsourelakis_2010a,
+@Article{Koutsourelakis_2010,
   author        = {Koutsourelakis, C and Chorianopoulos, Konstantinos},
   title         = {{Unaided Icon Recognition in Mobile Phones: A Comparative Study with Young Users}},
   journal       = {The Design Journal},
@@ -1325,7 +1349,7 @@ Designers of mobile phone icons have to balance a trade-off between the need of 
 differentiate their offerings through branding, and the need of the consumers for a familiar visual language in mobile phone
 menus.},
   doi = {10.2752/146069210X12766130824939},
-  link          = {Koutsourelakis_2010a.pdf},
+  link          = {Koutsourelakis_2010.pdf},
   keywords      = {human-computer interaction,icon,mobile phone,multimedia,recognition,ubiquitous computing,user study},
   mendeley-tags = {human-computer interaction,multimedia,ubiquitous computing},
   url           = {http://dx.doi.org/10.2752/146069210X12766130824939},
