--- a/_bib/papers.bib
+++ b/_bib/papers.bib
@@ -1,3 +1,17 @@
+@article{Garneli_2019,
+author = {Varvara Garneli and Konstantinos Chorianopoulos},
+title = {The effects of video game making within science content on student computational thinking skills and performance},
+journal = {Interactive Technology and Smart Education},
+volume = {0},
+number = {0},
+pages = {null},
+year = {2019},
+doi = {10.1108/ITSE-11-2018-0097},
+URL = {https://www.emeraldinsight.com/doi/abs/10.1108/ITSE-11-2018-0097},
+link={Garneli_2019.pdf},
+abstract = { Purpose This study aims to explore the effects of an alternative learning environment, such as the video game making (VGM) within science content, on computational thinking (CT) skills development and student performance. Design/methodology/approach A didactic intervention was performed for five weeks. Two student groups were taught the same computational concepts in two ways. One group was taught by constructing a video game within science content to practice science and computing curriculum while the other group constructed appropriately designed projects to practice only the computing curriculum. Additionally, the students constructed a pretest project before the beginning of the intervention and a post-test project after its end. Results were based on quantitative and qualitative code analysis and interviews from the students. Findings VGM within science content resulted in projects with more CT skills and also supported students to effectively apply their acquired coding skills, after the end of the intervention. Practical implications The results of this study suggest an interdisciplinary environment, such as the VGM within science content, which can effectively support CT skills development and computing curriculum. Originality/value Although VGM has been successfully applied to teach science content, this study explored the potential influence of this learning environment on CT skills development and coding fluency. Such interdisciplinary educational environments could be applied in the typical school settings to promote a plethora of skills and academic contents. }
+}
+
 @article{Merkouris_2019,
 author={Merkouris, Alexandros and Chorianopoulou, Betty and Chorianopoulos, Konstantinos and Chrissikopoulos, Vassilios},
 title={Understanding the Notion of Friction Through Gestural Interaction with a Remotely Controlled Robot},
