--- a/_bib/papers.bib
+++ b/_bib/papers.bib
@@ -1,3 +1,19 @@
+@article{Garneli_2019b,
+AUTHOR = {Garneli, Varvara and Patiniotis, Konstantinos and Chorianopoulos,Konstantinos},
+TITLE = {Integrating Science Tasks and Puzzles in Computer Role Playing Games},
+JOURNAL = {Multimodal Technologies and Interaction},
+VOLUME = {3},
+YEAR = {2019},
+NUMBER = {3},
+ARTICLE-NUMBER = {55},
+URL = {https://www.mdpi.com/2414-4088/3/3/55},
+ISSN = {2414-4088},
+ABSTRACT = {The design of educational serious games to be used as motivational learning environments is very rewarding but also very challenging. The integration of learning with playing activities seems to be one of the major challenges. Previous work has not examined the integration of science content based on the school curriculum in the gameplay mechanics of a computer role playing game (CRPG) and in a storyline which ends with a dramatic conflict. In this study, an educational CRPG was designed for learning concepts in the physical sciences according to the curriculum of the correspondent book. We integrated the content into the gameplay which included several tasks to be performed and puzzles to be solved, advancing players to successfully complete the game, according to the game&rsquo;s storyline. Finally, we performed a usability test for ease-of-use and enjoyment issues. Most testers considered the educational CRPG entertaining. Computer role playing game&rsquo;s gameplay mechanics provide affordances for the integration of science and technology courses in a playful learning environment.},
+link={Garneli_2019b.pdf},
+DOI = {10.3390/mti3030055}
+}
+
+
 @article{Garneli_2019,
 author = {Varvara Garneli and Konstantinos Chorianopoulos},
 title = {The effects of video game making within science content on student computational thinking skills and performance},
